kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: devsecops-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: devsecops-api

  template:
    metadata:
      labels:
        app: devsecops-api

    spec:
      containers:
        - name: api
          image: cloud-native-devsecops-api:dev
          imagePullPolicy: Never

          ports:
            - name: http
              containerPort: 8000

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 2
